2011-05-13    <zag@manzanillo>

	* tests/bl/vl/sample/kb/skb_object_creator.py (SKBObjectCreator.create_data_collection): 
	Changed to the new DataCollection model.

	* examples/load_data.py, examples/call_gt.py (App.preload):
	Changed to the new DataCollection model.

	* bl/vl/sample/kb/drivers/omero/samples_container.py (DataCollection):
	Changed to the new DataCollection model.

	* models/sample/data_collection.ome.xml: added a label field.

	* bl/vl/app/exporter/markers_set.py (do_register): can dump
	markers set definitions.

2011-05-12    <zag@manzanillo>

	* bl/vl/app/exporter/marker_definition.py (do_register): can dump
	marker definitions.

	* tools/exporter (main): Added an exporter utility.

2011-05-11    <zag@manzanillo>

	* bl/vl/app/importer/markers_set.py: Added new tool.

	* bl/vl/app/importer/marker_definition.py (Recorder): Added new tool.

	* tools/create_snp_tables: Added new tool.

2011-05-08    <zag@manzanillo>

	* bl/vl/sample/kb/drivers/omero/data_object.py
	(DataObject.__init__): added support for proxy propagation. This
	should be fixed in a systematic way.

2011-05-05    <zag@manzanillo>

	* bl/vl/app/importer/plate_well.py (Recorder): Added prefetching support.

2011-05-03    <zag@manzanillo>

	* bl/vl/app/importer/individual.py (Recorder.record): clean up.

	* bl/vl/individual/kb/drivers/omero/proxy.py (Proxy.get_enrolled): Added.

2011-04-30    <zag@manzanillo>

	* bl/vl/sample/kb/drivers/omero/samples_container.py (TiterPlate):
	moved barcode, label and virtualContainer handling to superclass

	* tests/bl/vl/individual/kb/test_ikb.py (TestIKB.test_enrollment): in phase ...

	* bl/vl/individual/kb/drivers/omero/individual.py (Individual): in phase ...

	* bl/vl/sample/kb/drivers/omero/study.py (Study): in phase with ...

	* bl/vl/individual/kb/drivers/omero/enrollment.py 
	(Enrollment): in phase with new convoluted...

	* bl/vl/sample/kb/drivers/omero/proxy_core.py (ProxyCore.save):